# lunara-sports

./: .env.example  .env.render.example  .env.vercel.example  .gitignore  .pre-commit-config.yaml  BUTTON_MAPPING.md  CAMBIOS_14_OCT_2025.txt  CHANGELOG_SESSION.txt  CLAUDE.md  CREATE_NEW_RESOURCES.sh  Current-Platform-Capabilities.txt  DASHBOARD_CHANGES_SUMMARY.md  DASHBOARD_VISUAL_ENHANCEMENTS.md  DELETE_OLD_RESOURCES.sh  DEPLOYMENT-STATUS.txt  DEPLOY_BACKEND.sh  HARDCODED_DATA_CLEANUP_PLAN.md  HERO_SECTION_MAKEOVER.md  IMPLEMENTATION_SUMMARY.md  Implementation-Strategy.txt  Makefile  NEW_AZURE_ARCHITECTURE_PLAN.md  NEW_RESOURCES_SUMMARY.md  PRODUCTION_CLEANUP_COMMANDS.sh  PRODUCTION_READINESS.md  PROJECT_STATUS_SUMMARY.md  Project-Documentation.txt  QA-Report.txt  QA.md  QA_SPRINT_REPORT_2025-10-03.md  QUICK-STATUS.txt  REACT_MIGRATION_SUMMARY.md  README.md  REALISTIC_QA_STATUS.md  REFRESH_FIX_SUMMARY.md  RESTART_DEV_SERVER.md  SECURITY_CLEANUP_REPORT.md  SafeSend_Backend_Architecture_Plan.md  TURBO_SPA_SETUP.md  azure-cleanup-commands.sh  (+28 more)
.claude/: settings.local.json
Developer-logs/: Instrucciones-Despliegue-Desarrollo.txt  developer-logs.txt  github-secrets-required.txt  next-dev.txt  next_dev.txt  project-documentation.txt  session-summary.txt  session_summary.txt
Documentation/: API_INTEGRATION.md  AZURE_DEPLOYMENT_FIX.md  COMPREHENSIVE_FIX_PLAN.md  CRITICAL_FIXES_2025-10-03.md  Document_13_Stability_Verification.md  Document_14_Integration_Testing.md  QA_MASTER_REPORT_2025-10-03.md  QA_UPDATE_CRITICAL_FIXES.md  TESTING_GUIDE.md  test-api-endpoints.sh
api/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
api/src/: config.py  main.py  metrics.py
api/src/db/: models.py  redis.py  session.py  sport_suite.py
api/src/kafka/: consumer.py  dead_letter.py  producer.py
api/src/models/: schemas.py
api/src/routers/: auth.py  boxscore.py  comments.py  games.py  leaderboard.py  picks.py  players.py  plays.py  predictions.py  reactions.py  standings.py  stats.py  teams.py
api/src/services/: auth_deps.py  auth_service.py  boxscore_service.py  comment_service.py  espn_client.py  game_service.py  olap_exporter.py  olap_poller.py  pick_sync_poller.py  pick_sync_service.py  pick_tracker_poller.py  play_service.py  player_service.py  prediction_service.py  reaction_service.py  scoreboard_poller.py  sport_suite_client.py  standings_service.py  stats_service.py  team_logos.py  team_mapping.py  team_service.py
api/src/ws/: live_feed.py  play_poller.py
api/tests/: conftest.py  test_auth_deps.py  test_auth_router.py  test_auth_service.py  test_boxscore_service.py  test_comment_service.py  test_coverage_push.py  test_db_services.py  test_endpoint_coverage.py  test_espn_client.py  test_final_coverage.py  test_game_service.py  test_games.py  test_health.py  test_infrastructure.py  test_kafka_api.py  test_kafka_consumer.py  test_main.py  test_olap.py  test_olap_poller.py  test_pick_sync_poller.py  test_pick_sync_service.py  test_pick_tracker.py  test_pick_tracker_poll.py  test_pick_tracker_poller.py  test_picks_router.py  test_play_poller.py  test_play_poller_extra.py  test_player_service.py  test_players_router.py  test_plays.py  test_pollers.py  test_prediction_service.py  test_predictions.py  test_predictions_router.py  test_reactions_router.py  test_remaining_coverage.py  test_scoreboard_poller_ext.py  test_session.py  test_session_extra.py  (+10 more)
backend/: .env.example  Dockerfile  api_benchmark.sh  api_benchmark_results.txt  create_demo_users.py  create_test_data.py  create_test_user.py  db.sqlite3  entrypoint.sh  manage.py  requirements.txt
branding-logos/: background#1.jpg 2
css/: style.css  support.css
docs/: ARCHITECTURE.md  SPORT_SUITE_INTEGRATION.md
frontend/: .env.example  .env.production  .gitignore  API_SETUP_COMPLETE.md  BUILD_GUIDE.md  QUICK_START.md  REACT_API_GUIDE.md  REACT_MIGRATION_GUIDE.md  REACT_MIGRATION_GUIDE.md.old  REACT_SETUP_COMPLETE.md  REACT_SETUP_COMPLETE.md.old  SafeSend_Backend_Architecture_Plan.html  TESTING_CHECKLIST.md  TEST_REACT_SETUP.html  VITE_MIGRATION_COMPLETE.md  build.sh  dashboard.html  eslint.config.js  index-template.html  index.html  messages.html  package-lock.json  package.json  payments.html  performance-results.json  performance-test.js  playwright.config.js  projects.html  qa-test-script.sh  security-test.js  signin.html  signup.html  staticwebapp.config.json  support.html  tailwind.config.js  test_flow.html  user_profile.html  vercel.json  vite.config.js  vitest-node-setup.cjs  (+1 more)
ingestion/: Dockerfile  README.md  pyproject.toml
ingestion/src/: __main__.py  backfill.py  config.py
ingestion/src/collectors/: base.py  historical.py  playbyplay.py  scoreboard.py
ingestion/src/importers/: sport_suite_games.py
ingestion/src/producers/: kafka_producer.py  pubsub_producer.py
ingestion/src/resilience/: __init__.py  circuit_breaker.py  retry.py
ingestion/src/schemas/: events.py
ingestion/tests/: test_backfill.py  test_circuit_breaker.py  test_collectors_ext.py  test_historical.py  test_kafka_producer.py  test_main_orchestrator.py  test_playbyplay.py  test_pubsub_producer.py  test_retry.py  test_scoreboard.py  test_sport_suite_games.py
js/: button_logic.js  cards.js  mobile-menu.js  particles.js  pramp.js  scripts.js  scroll_animation.js  ui.js  user_profile.js
kafka/: create-topics.sh
lumen-bot/: Dockerfile  bot.py  brain.py  cephalon-lumen.service  config.yaml  formatter.py  game_context.py  game_log.py  intelligence.py  lumen_tools.py  pyproject.toml  ws_listener.py
lumen-bot/tests/: test_game_context.py  test_intelligence.py
monitoring/: README.md
nginx/: Dockerfile  nginx.conf
schemas/: register_schemas.py
scripts/: gcp-setup.sh
storage/: README.md
stream-processor-pubsub/: Dockerfile  requirements.txt
(+272 files in other folders)
