[project]
name = "playbyplay-ingestion"
version = "0.1.0"
description = "ESPN API poller and Kafka producer for the Play-by-Play app"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "confluent-kafka[avro]>=2.6",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "apscheduler>=3.10",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by ruff-format
    "B008",  # Depends() in defaults — standard FastAPI pattern
    "B023",  # loop variable binding
    "SIM105", # contextlib.suppress — try/except/pass is fine
    "SIM108", # ternary — if/else is clearer with comments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "SIM117", "SIM105", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
