[project]
name = "cephalon-lumen"
version = "0.1.0"
description = "Cephalon Lumen — Lunara Sports NBA pick alerts via Discord DM"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.4",
    "httpx>=0.27",
    "websockets>=13.0",
    "structlog>=24.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100
